re-enabling image hosting and geoip
thank you based eqi

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@
 cursedboard.db
 config.py
 config.pyc
+__pycache__/utils.cpython-35.pyc
+__pycache__/thread_view.cpython-35.pyc
+__pycache__/session.cpython-35.pyc
+__pycache__/post_form.cpython-35.pyc
+__pycache__/motd.cpython-35.pyc
+__pycache__/image_viewer.cpython-35.pyc
+__pycache__/file_browser.cpython-35.pyc
+__pycache__/frontpage.cpython-35.pyc
+__pycache__/database.cpython-35.pyc
+__pycache__/controller.cpython-35.pyc
+__pycache__/config.cpython-35.pyc
+__pycache__/board_view.cpython-35.pyc
+motd.py.save
+src/pip-delete-this-directory.txt
+src/evnet/
